syntax = "proto3";
// 指定模板类的包路径
option java_package = "cn.starboot.tim.common.packet.proto";
// 指定模板类的名称，名称必须是有实际业务意义的
option java_outer_classname = "UserMessagePacketProto";

// IM私有协议包: 用户拉取消息
message UserMessagePacket{
    // 用户名ID
    string userId = 1;
    // 好友消息
    map<string , ChatPacket> friends = 2;
    // 群组消息
    map<string , ChatPacket> groups = 3;
}

message ChatPacket{
    // 发送者ID
    string fromId = 1;
    // 接收者ID
    string toId = 2;
    // 消息创建时间
    int64 createTime = 3;
    // 消息类型
    enum MsgType {
        // 文本消息
        TEXT = 0;
        // 图片消息
        IMAGE = 1;
        // 语音消息
        VOICE = 2;
        // 视频消息
        VIDEO = 3;
        // 音乐消息
        MUSIC = 4;
        // 新闻消息
        NEWS = 5;
        // 语音通话
        ONLINE_VOICE = 6;
        // 视频通话
        ONLINE_VIDEO = 7;
        // 视频会议
        ONLINE_MEETING = 8;
    };
    MsgType msgType = 4;
    // 聊天类型
    enum ChatType {
        // 未知消息
        UNKNOWN = 0;
        // 群聊消息
        GROUP = 1;
        // 私聊消息
        PRIVATE = 2;
    };
    ChatType chatType = 5;
    // 消息内容
    string content = 6;
    // 群组ID
    string groupId = 7;
    // 扩展字段,JSON对象格式如：{'扩展字段名称':'扩展字段value'}
    string extras = 8;

}